--- a/app/src/main/res/drawable/single_item_design.xml
+++ b/app/src/main/res/drawable/single_item_design.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape
-            android:shape="rectangle">
+            android:shape="oval">
             <solid
                 android:color="@color/lightGreen"/>
             <corners
